@@ -1,3 +1,8 @@
+2001-09-15  Cristy  <cristy@mystic.es.dupont.com>
+	* Surveying the code for 64-bit compatibility.
+	* The cloned colormap was too small (reported by Glenn).
+	* A blob was being unmapped more than once for multi-frame images.
+
 2001-09-12  Cristy  <cristy@mystic.es.dupont.com>
 	* Text drawing now handles UTF8-encoding.
 	* Off-by-one GetImagePixels() fix in draw.c
